[project]
name = "vinzzneckhs-beta"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["Flask==2.3.3", "requests==2.31.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.vercel]
entrypoint = "api.proxyxyz:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]
exclude = ["static*", "tests*"]
